--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="button_choose_date">Kies</string>
     <string name="send_notification">Stuur Notificatie</string>
     <string name="send_timed_notification">Stuur Notificatie (na 1 minuut)</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
