--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="prompt_last_name">Achternaam</string>
     <string name="prompt_birthDate">Geboortedatum</string>
     <string name="action_register">Registreren</string>
-    <string name="button_choose_date">Kies</string>
+    <string name="button_choose_date">Kies Geboortedatum</string>
     <string name="send_notification">Stuur Notificatie</string>
     <string name="send_timed_notification">Stuur Notificatie (na 1 minuut)</string>
     <string name="title_activity_main">MainActivity</string>
